force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Add_Products__c.field-meta.xml
<CustomField>
    <fullName>Add_Products__c</fullName>
    <description>DCP-1060 - To add products to Cart
DCP-8632 - To add products based on Direct Opportunity Or Indirect Opportunity.
DCP-25191 - Add Products For Direct Sale to UC Consortia Quote.
DCP-34910 - Disable button when Async Validation in Progress.
INC0350488 - Disable button when Reprice cart is in progress for Cloned Quote</description>
    <formula>IF(
	NOT(Invalid_Quote__c)
	&amp;&amp; LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0
	&amp;&amp; OR(
		TEXT(Apttus_Proposal__Approval_Stage__c) == &apos;Approval Required&apos;,
		TEXT(Apttus_Proposal__Approval_Stage__c) == &apos;Draft&apos;
	)
	&amp;&amp; Validation_In_Progress__c = False,
	IF(Is_Reprice_Completed__c = True,
		HYPERLINK(&quot;/apex/ApttusAddProducts?Id=&quot;&amp;Id&amp;&quot;&amp;ContractNumber=&quot; &amp; Contract_Numbers__c, IMAGE(&quot;/resource/Apttus_QPConfig__Button_AddProducts&quot;, &quot;Add Products&quot;), &quot;_self&quot;),
		$Label.Reprice_In_Progress_Info_Message
	),
	null
)</formula>
    <inlineHelpText>Click to add product(s) to the opportunity/quote.</inlineHelpText>
    <label>Add Products</label>
    <type>Text</type>
</CustomField>