force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Formula to poulate Opportunity Address line 1</description>
    <formula>IF ( 
    Invalid_Quote__c = false, 
    Apttus_Proposal__Opportunity__r.Address_Line_1__c , 
    NULL 
)</formula>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>