force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <description>DCP-45303: Customer Service user fills this field which is visible on generated Sales contract.</description>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>