force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Applied_Promo_1__c.field-meta.xml
<CustomField>
    <fullName>Applied_Promo_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will store Applied Promotion 1 record detail lookup</description>
    <label>Applied Promo 1</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>