force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Applied_Promo_2__c.field-meta.xml
<CustomField>
    <fullName>Applied_Promo_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will store Applied Promotion 2 record detail lookup</description>
    <label>Applied Promo 2</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Quotations (Applied Promo Code 2)</relationshipLabel>
    <relationshipName>Quotations1</relationshipName>
    <type>Lookup</type>
</CustomField>