force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Applied_Promo_3__c.field-meta.xml
<CustomField>
    <fullName>Applied_Promo_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will store Applied Promotion 3 record detail lookup</description>
    <label>Applied Promo 3</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Quotations (Applied Promo Code 3)</relationshipLabel>
    <relationshipName>Quotations2</relationshipName>
    <type>Lookup</type>
</CustomField>