force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Category__c</fullName>
    <description>Specify the Approval needs to be submitted for which category (e.g. Payment Term etc)</description>
    <label>Approval Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid_to_Date</fullName>
                <label>Valid to Date</label>
            </value>
            <value>
                <fullName>Terms_of_Payment</fullName>
                <label>Terms of Payment</label>
            </value>
            <value>
                <fullName>Post_Pricing_Message</fullName>
                <label>Post Pricing Message</label>
            </value>
            <value>
                <fullName>NIPT</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Inco_Terms</fullName>
                <label>Inco Terms</label>
            </value>
            <value>
                <fullName>Billing_Frequency</fullName>
                <label>Billing Frequency</label>
            </value>
            <value>
                <fullName>Billing_Type</fullName>
                <label>Billing Type</label>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>MFN_Approval</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>DSM_Approval_After_PriceChange</fullName>
            </value>
            <value>
                <fullName>Inco_Term</fullName>
                <isActive>false</isActive>
                <label>Inco_Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>