force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Approval_Hierarchy_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Record_Owner__c</fullName>
    <description>Field to specify the record owner based on approval hierarchy</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Hierarchy Record Owner</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>