force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Approval_Hierarchy_Transborder__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Transborder__c</fullName>
    <description>Lookup to Approval Hierarchy</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Hierarchy Transborder</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Quotations (Approval Hierarchy Transborder)</relationshipLabel>
    <relationshipName>Quotations1</relationshipName>
    <type>Lookup</type>
</CustomField>