force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Maximum of Approval Level (Record Owner) from all Quotation line item</description>
    <label>Approval Level</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Approval_Level_Record_Owner__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>