force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Approval_Level_Transborder__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Transborder__c</fullName>
    <description>Max of Approval Level (UC Discount) of all Quotation line item</description>
    <label>Approval Level Transborder</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Approval_Level_UC_Discount__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>