force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Account__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prospect Account</description>
    <inlineHelpText>Customer account to which Illumina is selling in this transaction; drives currency and discount(s) applicable to the transaction.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SFDC_520_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>