force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__ExpectedEndDate__c</fullName>
    <description>The expected end date for products and services</description>
    <inlineHelpText>Date Quote expires.</inlineHelpText>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>