force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__ExpectedStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__ExpectedStartDate__c</fullName>
    <description>The expected start date for products and services</description>
    <inlineHelpText>Date Quote was created.</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>