force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Payment_Term__c</fullName>
    <inlineHelpText>The Payer&apos;s payment terms; deviations from applicable terms require approval. No manual changes to terms are possible once Quote Generated. Manual changes to terms after quote is Approved (but not yet Generated) will revert stage to Approval Required.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>15M2</fullName>
            </value>
            <value>
                <fullName>1M15</fullName>
            </value>
            <value>
                <fullName>1M20</fullName>
            </value>
            <value>
                <fullName>1MEM</fullName>
            </value>
            <value>
                <fullName>202M</fullName>
            </value>
            <value>
                <fullName>2M10</fullName>
            </value>
            <value>
                <fullName>2M15</fullName>
            </value>
            <value>
                <fullName>2M20</fullName>
            </value>
            <value>
                <fullName>2M25</fullName>
            </value>
            <value>
                <fullName>2MEM</fullName>
            </value>
            <value>
                <fullName>CC00</fullName>
            </value>
            <value>
                <fullName>EM30</fullName>
            </value>
            <value>
                <fullName>EM45</fullName>
            </value>
            <value>
                <fullName>EM50</fullName>
            </value>
            <value>
                <fullName>EM60</fullName>
            </value>
            <value>
                <fullName>EM90</fullName>
            </value>
            <value>
                <fullName>FREE</fullName>
            </value>
            <value>
                <fullName>LC00</fullName>
            </value>
            <value>
                <fullName>LC90</fullName>
            </value>
            <value>
                <fullName>N120</fullName>
            </value>
            <value>
                <fullName>N180</fullName>
            </value>
            <value>
                <fullName>NT00</fullName>
            </value>
            <value>
                <fullName>NT07</fullName>
            </value>
            <value>
                <fullName>NT30</fullName>
            </value>
            <value>
                <fullName>NT45</fullName>
            </value>
            <value>
                <fullName>NT50</fullName>
            </value>
            <value>
                <fullName>NT55</fullName>
            </value>
            <value>
                <fullName>NT60</fullName>
            </value>
            <value>
                <fullName>NT75</fullName>
            </value>
            <value>
                <fullName>NT90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>