force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Presented_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Presented_Date__c</fullName>
    <description>The date the quote/proposal was presented to the customer</description>
    <inlineHelpText>Date quote presented to customer; auto-populated with date of &quot;Present&quot; click.</inlineHelpText>
    <label>Presented Date</label>
    <type>Date</type>
</CustomField>