force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Proposal_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Proposal_Approval_Date__c</fullName>
    <description>The date the quote/proposal was approved</description>
    <inlineHelpText>Approval Date of the Quotation</inlineHelpText>
    <label>Proposal Approval Date</label>
    <type>Date</type>
</CustomField>