force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Proposal_Name__c</fullName>
    <inlineHelpText>Internal Quote name used to differentiate between multiple quotations on an opportunity.</inlineHelpText>
    <label>Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>