force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the quote/proposal</description>
    <inlineHelpText>The Payer account&apos;s payment terms; deviations from applicable terms will require approval.</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>