force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PODate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PODate__c</fullName>
    <description>The purchase order date</description>
    <inlineHelpText>The purchase order date</inlineHelpText>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>