force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PricingDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PricingDate__c</fullName>
    <description>The pricing date, The product list price is determined based on this date.</description>
    <inlineHelpText>Date used to determine list price</inlineHelpText>
    <label>Pricing Date</label>
    <type>DateTime</type>
</CustomField>