force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Async_Generation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Async_Generation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-37888 Field created to store response once generate for large cart got success.</description>
    <label>Async Generation Complete</label>
    <type>Checkbox</type>
</CustomField>