force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Async_Validation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Async_Validation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[DCP-34910] - Notifies that the Validation is complete from Async Response</description>
    <label>Async Validation Complete</label>
    <type>Checkbox</type>
</CustomField>