force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up To Customer Master Data</description>
    <inlineHelpText>Customer account that will receive the invoice for this transaction. Changes in Bill-To account will automatically update associated Payer account and payment terms.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>