force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Bill_To_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_ERP_Number__c</fullName>
    <description>Bill to ERP customer Id</description>
    <formula>Bill_To__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To ERP Number</label>
    <type>Text</type>
</CustomField>