force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-1058 - Refers to the Billing Plan</description>
    <inlineHelpText>Frequency with which customer will be billed for this purchase.</inlineHelpText>
    <label>Billing Plan</label>
    <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>