force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Business_Unit_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Sold_To__c</fullName>
    <description>Field to show account Business Unit</description>
    <inlineHelpText>Account Business Unit</inlineHelpText>
    <label>Business Unit (Sold To)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>