force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Check_Quote_Is_Accepted_Opp_Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Check_Quote_Is_Accepted_Opp_Is_Won__c</fullName>
    <description>Checked When Opp Stage is Closed Won and Quote Stage is Accepted</description>
    <formula>IF ( ( TEXT ( Apttus_Proposal__Opportunity__r.StageName ) == $Label.OpportunityStageClosedWon &amp;&amp;
       TEXT ( Apttus_Proposal__Approval_Stage__c ) == $Label.QuoteStageAccepted )
     , true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Quote Is Accepted &amp; Opp Is Won</label>
    <type>Checkbox</type>
</CustomField>