force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Contract_Dates_Pending_for_HC__c.field-meta.xml
<CustomField>
    <fullName>Contract_Dates_Pending_for_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to include language related to Healthcare Check on the Service Contract</description>
    <inlineHelpText>Include language related to Healthcare Check on the Service Contract</inlineHelpText>
    <label>Contract Dates Pending for HC</label>
    <type>Checkbox</type>
</CustomField>