force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Contract_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Contract_Numbers__c</fullName>
    <description>Comma separated Contract Numbers to fetch Customer Specific Price</description>
    <label>Contract Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>