force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Opportunity Account Billing Country</description>
    <formula>Apttus_Proposal__Opportunity__r.Account.BillingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>