force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Direct_Sale_to_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sale_to_Ultimate_Consignee__c</fullName>
    <description>Formula field to populate "Direct sales to ultimate consignee"</description>
    <inlineHelpText>Field is applicable to Indirect transactions</inlineHelpText>
    <formula>Apttus_Proposal__Opportunity__r.Direct_Sale_to_Ultimate_Consignee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Sale to Ultimate Consignee</label>
    <type>Checkbox</type>
</CustomField>