force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>Pre-defined Sale Discount justification categories.</description>
    <inlineHelpText>Selecting Commercial Product Evaluation or Demo Instrument , Customer Service or Dispute Resolution , Other: Legal Review Required in No Charge Product Category will auto populate See No Charge Product Category in this field</inlineHelpText>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerate Sale</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Channel Partner Demo Program</fullName>
            </value>
            <value>
                <fullName>Competitive Pressure</fullName>
            </value>
            <value>
                <fullName>Cross Sell/Upsell</fullName>
            </value>
            <value>
                <fullName>Modified Marketing Promo</fullName>
            </value>
            <value>
                <fullName>Demo Instrument</fullName>
                <isActive>false</isActive>
                <label>Demo Instrument</label>
            </value>
            <value>
                <fullName>Donation</fullName>
                <isActive>false</isActive>
                <label>Donation</label>
            </value>
            <value>
                <fullName>Key influencer</fullName>
                <isActive>false</isActive>
                <label>Key influencer</label>
            </value>
            <value>
                <fullName>Pricing Limited By Regulation Or Policy</fullName>
            </value>
            <value>
                <fullName>See No Charge Product Category</fullName>
            </value>
            <value>
                <fullName>Volume/Tier Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>