force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Discount_Reason_Definition__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason_Definition__c</fullName>
    <description>Shows Definition of the &quot;Discount Reason&quot; field above</description>
    <formula>CASE(Discount_Reason__c,
  &quot;Accelerate Sale&quot;, $Label.Discount_Reason_Accelerate_Sale,
  &quot;Budget Constraint&quot;,  $Label.Discount_Reason_Budget_Constraint,
  &quot;Channel Partner Demo Program&quot;, $Label.Discount_Reason_Channel_Partner_Demo_Program,
  &quot;Competitive Pressure&quot;,  $Label.Discount_Reason_Competitive_pressure,
  &quot;Cross Sell/Upsell&quot;,  $Label.Discount_Reason_Upselling_discount,
  &quot;Modified Marketing Promo&quot;, $Label.Discount_Reason_Modified_Marketing_Promo,
  &quot;Pricing limited by regulation or policy&quot;,  $Label.Discount_Reason_Pricing_limited_by_regulation,
  &quot;See No Charge Product Category&quot;,  $Label.Discount_Reason_See_No_Charge_Product_Category,
  &quot;Volume/Tier Pricing&quot;,  $Label.Discount_Reason_Volume_pricing,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows definition of the &quot;Discount Reason&quot; field, if available</inlineHelpText>
    <label>Discount Reason Definition</label>
    <type>Text</type>
</CustomField>