force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>Lookup to distributor account</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Third party that purchases from Illumina to resell its products</inlineHelpText>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotations (Distributor)</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>