force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Distributor_District__c.field-meta.xml
<CustomField>
    <fullName>Distributor_District__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>District assigned to the Distributor.</description>
    <formula>Distributor__r.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor District</label>
    <type>Text</type>
</CustomField>