force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Distributor_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ERP_Number__c</fullName>
    <description>Distributor Account ERP custormer Id</description>
    <formula>Distributor__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor ERP Number</label>
    <type>Text</type>
</CustomField>