force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Estimated_Freight__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Freight__c</fullName>
    <description>Estimated Freight</description>
    <inlineHelpText>Approximate freight charges applicable for the transaction</inlineHelpText>
    <label>Estimated Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>