force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Estimated_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax__c</fullName>
    <description>Estimated tax</description>
    <inlineHelpText>Approximate tax applicable for the transaction</inlineHelpText>
    <label>Estimated Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>