force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Fapiao_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Fapiao_Type_Code__c</fullName>
    <description>DCP-28565 : Capture Fapiao Type Code for CN03 Quotes.</description>
    <label>Fapiao Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>