force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Fapiao_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Fapiao_Type_Description__c</fullName>
    <description>DCP-28565 : Capture Fapiao Type Description for CN03 Quotes.</description>
    <label>Fapiao Type Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>